--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 services:
   setup:
+    profiles:
+      - setup
+    build:
+      context: setup
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
     depends_on:
       - elasticsearch
     init: true
-    build:
-      context: setup/
-      args:
-        ELASTIC_VERSION: ${ELASTIC_VERSION}
     volumes:
       - ./setup/entrypoint.sh:/entrypoint.sh:ro,Z
       - ./setup/lib.sh:/lib.sh:ro,Z
       - ./setup/roles:/roles:ro,Z
-      - setup:/state:Z
     environment:
       ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
       LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
@@ -83,7 +84,6 @@ services:
       - elk
 
 volumes:
-  setup:
   elasticsearch-data:
 
 networks:
